--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ ruff = "^0.3.7"
 tqdm = "^4.66.2"
 types-tqdm = "^4.66.0.20240106"
 dvc = "^3.51.2"
+pre-commit = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
