--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ tqdm = "^4.66.2"
 types-tqdm = "^4.66.0.20240106"
 dvc = "^3.51.2"
 pre-commit = "^3.7.1"
+dvclive = "^3.46.0"
 
 [build-system]
 requires = ["poetry-core"]
