--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,9 @@
 line-length = 120
 
 [tool.mypy]
-strict = true
 disallow_untyped_calls = false
 allow_redefinition = true
+ignore_missing_imports = true
 
 [tool.pyright]
 reportRedeclaration = false
@@ -36,6 +36,8 @@ pre-commit = "^3.7.1"
 dvclive = "^3.46.0"
 pandas-stubs = "^2.2.2.240603"
 data-science-types = "^0.2.23"
+types-pyyaml = "^6.0.12.20240311"
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
