--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,15 @@ line-length = 120
 [tool.mypy]
 disallow_untyped_calls = false
 allow_redefinition = true
+plugins = ["pydantic.mypy"]
+
+[[tool.mypy.overrides]]
+module = [
+    "sklearn.*",
+    "dvc.*",
+    "dvclive",
+    "joblib",
+]
 ignore_missing_imports = true
 
 [tool.pyright]
@@ -22,7 +31,8 @@ python = "~3.11"
 pandas = "^2.2.2"
 numpy = "~1.26"
 scikit-learn = "^1.5.0"
-
+pydantic = "^2.9.0"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.0"
@@ -33,6 +43,7 @@ dvc = "^3.51.2"
 dvclive = "^3.46.1"
 pandas-stubs = "^2.2.2.240603"
 data-science-types = "^0.2.23"
+types-pyyaml = "^6.0.12.20240808"
 
 [build-system]
 requires = ["poetry-core"]
