new way to organize pipelines

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,9 +1,5 @@
-artifacts:
-  example/random_forest:
-    path: data/models/example/random_forest.pth
-    type: model
 metrics:
-- dvclive_eval/metrics.json
+- dvclive/example_set/eval/metrics.json
 plots:
-- dvclive_eval/plots/metrics:
+- dvclive/example_set/eval/plots/metrics:
     x: step
